--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="@/assets/weather.png">
+    <link rel="icon" href="/weather.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
+    <title>小Y天气</title>
   </head>
   <body>
     <div id="app"></div>
